--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<title>Poly Cipher Maker</title>
 	</head>
 	<body>
-    <div class="container">
+    <div class="container is-max-desktop">
     <div class="box">
       <h1 class="title">Poly Cipher Maker</h1>
       <div class="columns">
