--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<DOCTYPE! HTML>
 <html>
 	<head>
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
@@ -10,26 +9,26 @@
     <div class="box">
       <h1 class="title">Poly Cipher Maker</h1>
       <div class="columns">
-        <div class="column"> 
+        <div class="column">
           <div id="input">
             <form>
               <div class="field">
                 <label class="label">Word Key</label>
                 <div class="control">
-                  <input class="input" id="wordkey" type="text" placeholder="Text input">
+                    <label for="wordKey"></label><input class="input" id="wordKey" type="text" placeholder="Text input">
                 </div>
               </div>
 
               <div class="field">
                 <label class="label">Message</label>
                 <div class="control">
-                  <textarea class="textarea" id="message" placeholder="Textarea"></textarea>
+                    <label for="message"></label><textarea class="textarea" id="message" placeholder="Textarea"></textarea>
                 </div>
               </div>
 
               <div class="field">
                 <div class="control">
-                  <button id="encipher" class="button is-link">Submit</button>
+                  <button onclick="encipherText(); return false;" id="submit" class="button is-link">Submit</button>
                 </div>
               </div>
             </form>
@@ -37,7 +36,7 @@
         </div>
         <div class="column">
           <div id="output">
-            <h3 class="subtitle">Enciphered Text</h3><p id="encipheredtext"></p>
+            <h3 class="subtitle">Enciphered Text</h3><p id="encipheredText"></p>
           </div>
         </div>
       </div>
