--- a/index.html
+++ b/index.html
@@ -5,13 +5,12 @@
 		<title>Poly Cipher Maker</title>
 	</head>
 	<body>
-    <div class="container is-max-desktop">
+    <div class="container">
     <div class="box">
       <h1 class="title">Poly Cipher Maker</h1>
-      <div class="columns">
+      <div class="columns is-desktop">
         <div class="column">
-          <div id="input">
-            <form>
+
               <div class="field">
                 <label class="label">Word Key</label>
                 <div class="control">
@@ -31,13 +30,16 @@
                   <button onclick="encipherText(); return false;" id="submit" class="button is-link">Submit</button>
                 </div>
               </div>
-            </form>
-          </div>
+
         </div>
         <div class="column">
-          <div id="output">
-            <h3 class="subtitle">Enciphered Text</h3><p id="encipheredText"></p>
-          </div>
+
+            <div class="field">
+                <label class="label">Enciphered Text</label>
+                <div class="control">
+                    <label for="message"></label><p class="textarea" id="encipheredText" ></p>
+                </div>
+            </div>
         </div>
       </div>
     </div>
